--- a/front-end/index.html
+++ b/front-end/index.html
@@ -57,11 +57,7 @@
       </div>
 
       <!-- Nav Item - Pages Collapse Menu -->
-      <li class="nav-item">
-        <a class="nav-link" href="charts.html">
-          <i class="fas fa-fw fa-users"></i>
-          <span>Data Users</span></a>
-      </li>
+      
       <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true"
           aria-controls="collapseTwo">
@@ -86,6 +82,11 @@
       </div>
       <!-- Nav Item - Charts -->
       <li class="nav-item">
+        <a class="nav-link" href="datauser.html">
+          <i class="fas fa-fw fa-users"></i>
+          <span>Data Users</span></a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="databarang.html">
           <i class="fas fa-fw fa-book"></i>
           <span>Data Barang</span></a>
@@ -95,7 +96,7 @@
       <li class="nav-item">
         <a class="nav-link" href="transaksi.html">
           <i class="fas fa-fw fa-shopping-bag"></i>
-          <span>Transaksi</span></a>
+          <span>Data Transaksi</span></a>
       </li>
 
       <li class="nav-item">
@@ -235,7 +236,7 @@
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
-                      <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Barang Terjual</div>
+                      <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Total Transaksi</div>
                       <div class="row no-gutters align-items-center">
                         <div class="col-auto">
                           <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">10</div>
