--- a/front-end/transaksi.html
+++ b/front-end/transaksi.html
@@ -57,11 +57,7 @@
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link" href="charts.html">
-                    <i class="fas fa-fw fa-users"></i>
-                    <span>Data Users</span></a>
-            </li>
+           
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
                     aria-expanded="true" aria-controls="collapseTwo">
@@ -71,8 +67,8 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">User Settings:</h6>
-                        <a class="collapse-item" href="buttons.html">Edit Profile</a>
-                        <a class="collapse-item" href="cards.html">Change Password</a>
+                        <a class="collapse-item" href="#">Edit Profile</a>
+                        <a class="collapse-item" href="#">Change Password</a>
                     </div>
                 </div>
             </li>
@@ -85,6 +81,11 @@
                 Menu
             </div>
             <!-- Nav Item - Charts -->
+            <li class="nav-item">
+                <a class="nav-link" href="datauser.html">
+                    <i class="fas fa-fw fa-users"></i>
+                    <span>Data Users</span></a>
+            </li>
             <li class="nav-item">
                 <a class="nav-link" href="databarang.html">
                     <i class="fas fa-fw fa-book"></i>
